# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# PINS test functions that can be run on any infrastructure that supports ThinKit.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "gnmi_helper",
    srcs = ["gnmi_helper.cc"],
    hdrs = ["gnmi_helper.h"],
    deps = [
        ":openconfig_cc_proto",
        "//lib/p4rt:p4rt_port",
        "//lib/utils:json_utils",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@openconfig_gnmi//proto/gnmi_ext:gnmi_ext_cc_proto",
        "@openconfig_gnoi//types:types_cc_proto",
        "@grpc//:grpc++",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/functional:any_invocable",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:collections",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@protobuf//:protobuf",
        "@re2//:re2",
        "@jsoncpp//:jsoncpp",
    ],
)

cc_test(
    name = "gnmi_helper_test",
    srcs = ["gnmi_helper_test.cc"],
    deps = [
        ":gnmi_helper",
        ":openconfig_cc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@openconfig_gnoi//types:types_cc_proto",
        "@grpc//:grpc++",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
        "@protobuf//:protobuf",
    ],
)

proto_library(
    name = "openconfig_proto",
    srcs = ["openconfig.proto"],
)

cc_proto_library(
    name = "openconfig_cc_proto",
    deps = [":openconfig_proto"],
)
