# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# PINS test functions that can be run on any infrastructure that supports ThinKit.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "gnoi_helper",
    srcs = ["gnoi_helper.cc"],
    hdrs = ["gnoi_helper.h"],
    deps = [
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "gnoi_helper_test",
    srcs = ["gnoi_helper_test.cc"],
    deps = [
        ":gnoi_helper",
        "@com_google_gutil//gutil:status_matchers",
        "@com_google_gutil//gutil:testing",
        "@com_google_googletest//:gtest_main",
    ],
)
