# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "packet_listener",
    testonly = 1,
    srcs = ["packet_listener.cc"],
    hdrs = ["packet_listener.h"],
    deps = [
        ":p4rt_programming_context",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:pd",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "//thinkit:control_device",
        "//thinkit:packet_generation_finalizer",
        "//thinkit:switch",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "p4rt_programming_context",
    srcs = ["p4rt_programming_context.cc"],
    hdrs = ["p4rt_programming_context.h"],
    deps = [
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/functional:bind_front",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
    ],
)

cc_test(
    name = "p4rt_programming_context_test",
    srcs = ["p4rt_programming_context_test.cc"],
    deps = [
        ":p4rt_programming_context",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "p4rt_port",
    srcs = ["p4rt_port.cc"],
    hdrs = ["p4rt_port.h"],
    deps = [
        "@p4_infra//string_encodings:byte_string",
        "@p4_infra//string_encodings:decimal_string",
        "@p4_infra//string_encodings:hex_string",
        "@abseil-cpp//absl/numeric:bits",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "p4rt_port_test",
    srcs = ["p4rt_port_test.cc"],
    deps = [
        ":p4rt_port",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)
