# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "linux_ssh_helper",
    hdrs = ["linux_ssh_helper.h"],
    deps = [
        "//thinkit:ssh_client",
	"@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "mock_linux_ssh_helper",
    testonly = 1,
    hdrs = ["mock_linux_ssh_helper.h"],
    deps = [
        ":linux_ssh_helper",
        "//thinkit:ssh_client",
	"@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "mock_linux_ssh_helper_test",
    srcs = ["mock_linux_ssh_helper_test.cc"],
    deps = [
        ":mock_linux_ssh_helper",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "ssh_wrapper_client",
    testonly = 1,
    srcs = ["ssh_wrapper_client.cc"],
    hdrs = ["ssh_wrapper_client.h"],
    deps = [
        ":linux_ssh_helper",
        "//gutil/gutil:status",
        "//thinkit:ssh_client",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "common_ssh_util",
    srcs = ["common_ssh_util.cc"],
    hdrs = ["common_ssh_util.h"],
    deps = [
	":linux_ssh_helper",
        "//thinkit:ssh_client",
	"@com_google_absl//absl/log",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
	"@com_google_absl//absl/types:span",
    ],
)
