# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "linux_ssh_helper",
    hdrs = ["linux_ssh_helper.h"],
    deps = [
        "//thinkit:ssh_client",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "mock_linux_ssh_helper",
    testonly = 1,
    hdrs = ["mock_linux_ssh_helper.h"],
    deps = [
        ":linux_ssh_helper",
        "//thinkit:ssh_client",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "mock_linux_ssh_helper_test",
    srcs = ["mock_linux_ssh_helper_test.cc"],
    deps = [
        ":mock_linux_ssh_helper",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ssh_wrapper_client",
    testonly = 1,
    srcs = ["ssh_wrapper_client.cc"],
    hdrs = ["ssh_wrapper_client.h"],
    deps = [
        ":linux_ssh_helper",
        "//thinkit:ssh_client",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/time",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "common_ssh_util",
    srcs = ["common_ssh_util.cc"],
    hdrs = ["common_ssh_util.h"],
    deps = [
        ":linux_ssh_helper",
        "//thinkit:ssh_client",
        "@abseil-cpp//absl/base:no_destructor",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:string_view",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
    ],
)
