# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# PINS test functions that can be run on any infrastructure that supports ThinKit.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "json_utils",
    srcs = ["json_utils.cc"],
    hdrs = [
        "json_utils.h",
    ],
    copts = ["-fexceptions"],
    features = ["-use_header_modules"],  # Incompatible with -fexceptions.
    deps = [
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
        "@jsoncpp//:jsoncpp",
    ],
)

cc_test(
    name = "json_utils_test",
    srcs = ["json_utils_test.cc"],
    deps = [
        ":json_utils",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@jsoncpp//:jsoncpp",
    ],
)

cc_library(
    name = "json_test_utils",
    testonly = True,
    srcs = ["json_test_utils.cc"],
    hdrs = ["json_test_utils.h"],
    deps = [
        ":json_utils",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "json_test_utils_test",
    srcs = ["json_test_utils_test.cc"],
    deps = [
        ":json_test_utils",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "generic_testbed_utils",
    testonly = True,
    srcs = ["generic_testbed_utils.cc"],
    hdrs = ["generic_testbed_utils.h"],
    deps = [
        "//lib/gnmi:gnmi_helper",
        "//lib/validator:validator_lib",
        "//thinkit:generic_testbed",
        "//thinkit:switch",
        "//thinkit/proto:generic_testbed_cc_proto",
        "@com_github_otg_models//:otg_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "constants",
    testonly = True,
    srcs = ["constants.cc"],
    hdrs = ["constants.h"],
    deps = [
        "//thinkit/proto:generic_testbed_cc_proto",
        "@com_github_otg_models//:otg_cc_proto",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "generic_testbed_utils_test",
    srcs = ["generic_testbed_utils_test.cc"],
    deps = [
        ":generic_testbed_utils",
        "//thinkit:generic_testbed",
        "//thinkit:mock_control_device",
        "//thinkit:mock_generic_testbed",
        "//thinkit:mock_switch",
        "//thinkit/proto:generic_testbed_cc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@grpc//:grpc++",
        "@com_github_otg_models//:otg_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "reboot_operations",
    testonly = True,
    srcs = ["reboot_operations.cc"],
    hdrs = ["reboot_operations.h"],
    deps = [
        "//lib/validator:validator_lib",
        "//thinkit:ssh_client",
        "//thinkit:switch",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "merging_status_bundle",
    srcs = ["merging_status_bundle.cc"],
    hdrs = ["merging_status_bundle.h"],
    deps = [
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/functional:any_invocable",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
    ],
)

cc_test(
    name = "merging_status_bundle_test",
    srcs = ["merging_status_bundle_test.cc"],
    deps = [
        ":merging_status_bundle",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/synchronization",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)
