# Copyright (c) 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# The validator library is designed to provide a backend-agnostic method
# to query the status of entities used in tests.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "validator",
    srcs = ["validator.cc"],
    hdrs = ["validator.h"],
    deps = [
        ":validator_backend",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "validator_backend",
    srcs = ["validator_backend.cc"],
    hdrs = ["validator_backend.h"],
    deps = [
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/meta:type_traits",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "common_backend",
    testonly = 1,
    srcs = ["common_backend.cc"],
    hdrs = ["common_backend.h"],
    deps = [
        ":validator",
        ":validator_backend",
        ":validator_lib",
        "//thinkit:ssh_client",
        "@abseil-cpp//absl/functional:bind_front",
    ],
)

cc_test(
    name = "validator_backend_test",
    srcs = ["validator_backend_test.cc"],
    deps = [
        ":validator_backend",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "pins_backend",
    testonly = 1,
    srcs = ["pins_backend.cc"],
    hdrs = ["pins_backend.h"],
    deps = [
        ":validator",
        ":validator_backend",
        ":validator_lib",
        "//thinkit:switch",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/functional:bind_front",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "validator_lib",
    testonly = 1,
    srcs = ["validator_lib.cc"],
    hdrs = ["validator_lib.h"],
    deps = [
        "//lib/gnmi:gnmi_helper",
        "//lib/gnoi:gnoi_helper",
        "//lib/ssh:ssh_wrapper_client",
        "//thinkit:ssh_client",
        "//thinkit:switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_proto",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "validator_lib_test",
    srcs = ["validator_lib_test.cc"],
    deps = [
        ":validator_lib",
        "//thinkit:switch",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "config_validator",
    srcs = ["config_validator.cc"],
    hdrs = ["config_validator.h"],
    deps = [
        "//lib/gnmi:gnmi_helper",
        "//lib/utils:json_utils",
        "//thinkit:switch",
        "//thinkit:test_environment",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "config_validator_test",
    srcs = ["config_validator_test.cc"],
    deps = [
        ":config_validator",
        "//thinkit:mock_switch",
        "//thinkit:mock_test_environment",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@grpc//:grpc++",
        "@nlohmann_json//:json",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:string_view",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)
